--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,13 @@ body,
 
 #app {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .box {
-  width: 60px;
+  width: 300px;
   height: 60px;
   background: #2862f5;
   margin: 5px;
+  flex-: 1;
+  /* flex é a junção de flex-grow e flex-shrink (flex: 1 0;)*/
 }
