--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,16 @@ body,
 
 #app {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  align-content: center; /* Alinha os elementos quando estão em mais de uma linha */
 }
 
 .box {
-  width: 300px;
+  width: 250px;
   height: 60px;
   background: #2862f5;
   margin: 5px;
-  flex-: 1;
   /* flex é a junção de flex-grow e flex-shrink (flex: 1 0;)*/
 }
